# docker-entrega

./: DockerFile  README.md  docker-compose.yml  main.py  pyproject.toml
